--- a/src/app/inside/manage/hot-product/hot-product.component.html
+++ b/src/app/inside/manage/hot-product/hot-product.component.html
@@ -61,6 +61,8 @@
                                     <thead class="text-uppercase">
                                         <tr>
                                             <th scope="col">No</th>
+                                            <th scope="col">Created At</th>
+                                            <th scope="col">Updated At</th>
                                             <th scope="col">Product</th>
                                             <th scope="col">Category</th>
                                             <th scope="col">Seller</th>
@@ -74,6 +76,8 @@
                                         <tr *ngFor="let item of hotProductList
                                             , let i = index">
                                             <th scope="row">{{i + 1}}</th>
+                                            <th>{{item.createdAt | date:'yyyy/MM/dd - HH:mm:ss':'VI'}}</th>
+                                            <th>{{item.updatedAt | date:'yyyy/MM/dd - HH:mm:ss':'VI'}}</th>
                                             <td>{{item.product.productName}}</td>
                                             <td>{{item.product.category.categoryName}}</td>
                                             <td>{{getSellerName(item.product.accountId)}}</td>
