--- a/src/app/inside/manage/product/product.component.html
+++ b/src/app/inside/manage/product/product.component.html
@@ -106,7 +106,7 @@
                                             <td>
                                                 <ul class="d-flex justify-content-center">
                                                     <li class="mr-3">
-                                                        <a class="text-secondary">
+                                                        <a [routerLink]="['/product/detail']" [queryParams]="{id: item.productId}" class="text-secondary">
                                                             <i class="ti-eye"></i>
                                                         </a>
                                                     </li>
